# Proyecto1-Arqui2

./: .gitignore  Comando para agregarlo todo.txt  README.md
MainProgram/: CMakeLists.txt  CMakeSettings.json
MainProgram/include/: ConfigManager.h  CreditsState.h  MainMenuState.h  MultiplayerState.h  OptionsState.h  SinglePlayerState.h  State.h  StateManager.h
MainProgram/include/core/: State.h  StateManager.h
MainProgram/include/programs/cpu_tlp_shared_cache/: CpuTLPControlAPI.h  CpuTLPSharedCacheState.h
MainProgram/include/programs/cpu_tlp_shared_cache/components/: InstructionMemoryComponent.h  PE0Component.h  PE1Component.h  PE2Component.h  PE3Component.h  SharedData.h
MainProgram/include/programs/cpu_tlp_shared_cache/utils/: TextureCache.h
MainProgram/include/programs/cpu_tlp_shared_cache/views/: AnalysisDataView.h  CompilerView.h  GeneralView.h  ICpuTLPView.h  PE0CPUView.h  PE0MemView.h  PE0RegView.h  PE1CPUView.h  PE1MemView.h  PE1RegView.h  PE2CPUView.h  PE2MemView.h  PE2RegView.h  PE3CPUView.h  PE3MemView.h  PE3RegView.h  RAMView.h
MainProgram/include/programs/cpu_tlp_shared_cache/widgets/: InstructionDisassembler.h  Log.h  MemCacheTable.h  RamTable.h  RegTable.h  ZoomPanImage.h
MainProgram/include/states/: MainMenuState.h  ProgramState.h
MainProgram/include/systems/: AudioManager.h  ConfigManager.h
MainProgram/include/ui/: SettingsOverlay.h
MainProgram/include/util/: errorReporting.h
MainProgram/resources/: config.json
MainProgram/src/: ConfigManager.cpp  CreditsState.cpp  MainMenuState.cpp  MultiplayerState.cpp  OptionsState.cpp  SinglePlayerState.cpp  State.cpp  StateManager.cpp  main.cpp
MainProgram/src/core/: State.cpp  StateManager.cpp
MainProgram/src/programs/cpu_tlp_shared_cache/: CpuTLPSharedCacheState.cpp  factory.cpp
MainProgram/src/programs/cpu_tlp_shared_cache/components/: InstructionMemoryComponent.cpp  PE0Component.cpp  PE1Component.cpp  PE2Component.cpp  PE3Component.cpp
MainProgram/src/programs/cpu_tlp_shared_cache/utils/: TextureCache.cpp
MainProgram/src/programs/cpu_tlp_shared_cache/views/: AnalysisDataView.cpp  CompilerView.cpp  GeneralView.cpp  PE0CPUView.cpp  PE0MemView.cpp  PE0RegView.cpp  PE1CPUView.cpp  PE1MemView.cpp  PE1RegView.cpp  PE2CPUView.cpp  PE2MemView.cpp  PE2RegView.cpp  PE3CPUView.cpp  PE3MemView.cpp  PE3RegView.cpp  RAMView.cpp
MainProgram/src/programs/cpu_tlp_shared_cache/widgets/: InstructionDisassembler.cpp  MemCacheTable.cpp  RamTable.cpp  RegTable.cpp  ZoomPanImage.cpp
MainProgram/src/states/: MainMenuState.cpp  ProgramState.cpp
MainProgram/src/systems/: AudioManager.cpp  ConfigManager.cpp
MainProgram/src/ui/: SettingsOverlay.cpp
